testcases/error/call_non_function.veryl
module call_non_function {
    let _a: logic = 0;
    initial {
        _a();
    }
}
